Fleet in being and smarter navy missions

--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -142,6 +142,8 @@ ww1_germanrework.25.t:0 "Einstein Comes to Germany"
  ww1_germanrework.25.a:0 "But he's a jew?"
 
 #Decisions
+GER_fleet_in_being_mission:0 "Fleet in Being"
+GER_smarter_navy_mission:0 "Smarter Navy"
 
 #Reichstag
 GER_reichstag_category:0 "Reichstag"
@@ -181,11 +183,14 @@ GER_expand_fortifications_in_allestein:0 "Expand Forticiations in Allestein"
 
 #Flags
 GER_ww1_state_munitions:0 "Investing in State Munitions"
+GER_built_battleships:0 "Has deployed 2 more battleships to the Kriegsmarine"
+GER_built_subs:0 "Has deployed 20 more submarines to the Kriegsmarine"
 
 #Tooltips
 ww1_germanytooltip1:0 "If Belgium accepts our proposal we can expect the profit to benefit our economy as a whole"
 ww1_germanytooltip2:0 "Whichever faction in the right wing is more powerful will determine the outcome of German politics after the inevitable major war in Europe. However, empowering the nationalists will be difficult and will result in an unstable empire prior to the war."
 ww1_germanytooltip3:0 "This focus will be automatically completed if a §cconservative§! chancellor comes into power"
+
 
 #Dynamic Modifiers
 GER_agricultural_incentives:0 "Agricultural Incentives"
