--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4963,6 +4963,8 @@
 
 
 #####romania
+ROM_balance_the_budget:0 "Balance the Budget"
+ROM_balance_the_budget_desc:0 "Many liberal governments of the past have ran a large deficit. This is fiscally unsustainable, and we must fix it. We shall cut wasteful spending to ensure the have a slight surplus by next year."
 ww1_romania.26.t:0 "Mass Resignations"
 ww1_romania.26.d:0 "In protest of Carps government, many in parliment have resigned, demanding Carp do the same. They claim they cannot, in good faith, work with such a corrupt government. With this, the king has clearly lost faith in our government. Its going to take a miracle to stay in power at this point, thats for sure"
 ww1_romania.26.a:0 "They're overreacting!"
@@ -4984,6 +4986,8 @@ pot_tt:0 "When this focus is selected:\nGets event '§YShutting Down the Tramcar
 ROM_re_assure_liberals:0  "Reassure The Liberals"
 ROM_re_assure_liberals_desc:0 "Many liberals in Romania have been worried by the kings new government. They fear a reversion of Romanias democracy, and the king replacing said democracy with a dictatorship. These rumors are absolutely false. This government is not a thin veiled shadow for the king, and the king is still committed to Romanian democracy."
 kings_gov.tt:0 "This focus will be §Yautocompleted§! if King Carol appoints the §mPCD§! to form a government"
+kings_gov2.tt:0 "This focus will be §Yautocompleted§! if the King appoints §YTitu Maiorescu§! of the §cPC§! to form a government"
+
 no_happy_few:0 "Didn't accept Carols request to not undo land reform"
 ROM_we_happy_few:0 "We Happy Few"
 ROM_we_happy_few_desc:0 "Is it not the landlords who make up some of the richest in Romania? Angering them further won't do us any good, and we should instead reach out to landlords and offer them some input on our future domestic legislation"
@@ -5064,6 +5068,12 @@ ROM_french_russian_attache:0 "French-Russian attache"
 ROM_lessons_from_balkan_wars:0 "Lessons from the Balkan wars" 
 ROM_minimum_wage_law:0 "Pass a minimum wage law"
 ROM_anti_corruption_campaign:0 "Anti-corruption campaign"
+ROM_halve_parliments_size:0 "Halve Parliments Size"
+ROM_halve_parliments_size_desc:0 "Romanias parliment is much too bloated and powerful. To reduce parliments power, we should reduce their size in half and draw new boundries favoring conservative politicians."
+ROM_law_and_order:0 "A Stable Government"
+ROM_law_and_order_desc:0 "The kings number 1 priority above all is clearly a stable government. While the king may disagree with our anti democratic policies, if we can promise the king a stable hand during the dangerous times the world is facing as of now then he may be inclined to accept our rule, for now."
+ROM_agrarianists_in_power:0 "The Agrarianist Canidate"
+ROM_agrarianists_in_power_desc:0 "The fall of Carps corrupt government has lead to the king appointing Titu Maiorescu as prime minister. Maiorescu is apart of the 'Agrarianist' faction of the PC, which prioritizes fiscal responsibility, social conservatism, and as one would expect, rural issues such as education and land reform."
 #events 
 ww1_romania.18.d:0 "With the king losing faith in the current government, the current Prime Minister has been forced to resign. With the Prime Minister spot vacant, the king will now have to form a new government. The king has several different options available, and must pick the best one. Who shall be appointed to form the next government?"
 ww1_romania.18.a:0 "The PCD will lead a stable government!"
@@ -5168,7 +5178,7 @@ ROM_mandated_insurance1:0 "Mandated Insurance"
 ROM_kings_influence:0 "The Political King"
 ROM_influence_of_the_church:0 "Influence of the Church"
 ROM_corruption_purges:0 "Corruption purges"
-
+ROM_balance_budget:0 "Budget Balancing"
 ROM_blue_law_overturned:0 "Overturned Blue Law"
 
 #Traits
@@ -5187,8 +5197,8 @@ ROM_the_kings_government:0 "The Kings Government"
 ROM_the_kings_government_desc:0 "The failure of PC and PNL to govern the country in recent years has forced our hand. With the current government dismissed, we shall task the moderates of the PCD to form a new government. This sensible coalition should hopefully govern the country carefully in the coming times."
 ROM_romanian_army_idea:0 "Romanian Army"
 modify_rom_army:0 "Modify '§YRomanian Army§!' by:\nArmy Experience Gain: §G+0.03§!"
-ROM_army_org:0 "Modify '§YRomanian Army§!' by:\nArmy Organisation Regain: §G+5%§!\nArmy Organisation: §G+5%§!"
-ROM_speed:0 "Modify '§YRomanian Army§!' by:\nArmy Speed: §G+5%§!"
+ROM_army_org:0 "Modify '§YRomanian Army§!' by:\nArmy Organisation Regain: §G+5.00%§!\nArmy Organisation: §G+5.00%§!"
+ROM_speed:0 "Modify '§YRomanian Army§!' by:\nArmy Speed: §G+5.00%§!"
  member_of_pc:0 "Member of §cPC§!"
  member_of_pnl:0 "Member of §mPNL§!"
  member_of_psdr:0 "Member of §rPSDR§!"
