--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -8947,6 +8947,9 @@ FRA_front_populaire_desc:0 "The Popular Front united the left-liberal, radical s
  armenian_claims:0 "Armenian-claimed Territories"
  azeri_claims:0 "Azeri-claimed Territories"
  georgian_claims:0 "Georgian-claimed Territories"
+ join_transcaucasia:0 "Join [FROM.GetNameDef]"
+ GEO_transcaucasia_modifier:0 "Transcaucasian State"
+
  MTG_auto_update_tons:0 "Navy inventory"
  MTG_TWGR_auto_update_tons:0 "Update the navy tonnage each 14 days."
 
