--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -188,9 +188,9 @@ GER_built_subs:0 "Has deployed 20 more submarines to the Kriegsmarine"
 
 #Tooltips
 ww1_germanytooltip1:0 "If Belgium accepts our proposal we can expect the profit to benefit our economy as a whole"
-ww1_germanytooltip2:0 "Whichever faction in the right wing is more powerful will determine the outcome of German politics after the inevitable major war in Europe. However, empowering the nationalists will be difficult and will result in an unstable empire prior to the war."
+ww1_germanytooltip2:0 "Whichever faction in the right wing is more powerful will determine the outcome of German politics after the inevitable major war in Europe. However, empowering the nationalists will be difficult and will result in an unstable empire prior to the war"
 ww1_germanytooltip3:0 "This focus will be automatically completed if a §cconservative§! chancellor comes into power"
-
+ww1_germanytooltip4:0 "After completing this focus we will have to expand the navy by a set amount in a certain amount of time"
 
 #Dynamic Modifiers
 GER_agricultural_incentives:0 "Agricultural Incentives"
