some political advisors

--- a/localisation/english/ww1_characters_l_english.yml
+++ b/localisation/english/ww1_characters_l_english.yml
@@ -1460,6 +1460,7 @@ VIN_joost_van_vollenhoven:0 "Joost Van Vollenhoven"
  GER_otto_von_lossow:0 "Otto von Lossow"
  GER_friedrich_ii:0 "Friedrich II. von Baden"
  GER_friedrich_franz_iv:0 "Friedrich Franz IV. von Mecklenburg-Schwerin"
+ GER_jordan_von_krocher:0 "Jordan Von Krocher"
  
  SAX_friedrich_august_iii:0 "Friedrich August III."
  SAX_rudolf_heinze:0 "Rudolf Heinze"
