--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -53,7 +53,7 @@ ww1_germanrework.1.t:0 "Germany's Disgrace"
  ww1_germanrework.1.a:0 "Hollweg should stay"
  ww1_germanrework.1.b:0 "The Kaiser pressures Hollweg to resign"
 ww1_germanrework.2.t:0 "The Kaiser Appoints von Heydbrand"
- ww1_germanrework.2.d:0 ""
+ ww1_germanrework.2.d:0 "In a bold and decisive move, Kaiser Wilhelm II has appointed Ernst von Heydbrand und der Lasa as the new Chancellor of the German Empire. A figure renowned for his staunch conservatism and unwavering dedication to the Prussian ideals, von Heydbrand's ascent marks a significant shift in the political landscape of the empire.\n\nBorn into an aristocratic family, Ernst von Heydbrand has long been a prominent voice in the German Conservative Party. His career has been characterized by a fervent advocacy for the preservation of traditional German values and institutions. A fierce opponent of liberalism and socialism, von Heydbrand has consistently championed policies that strengthen the monarchy, the military, and the agrarian interests that form the backbone of his support.\n\nVon Heydbrand's tenure is expected to usher in an era of intensified conservative governance. With a reputation for his iron will and unyielding principles, he is anticipated to reinforce the Kaiser's vision of a strong, unified Germany, poised to assert its influence on the European stage. However, his appointment is not without controversy, as it risks deepening the divides within the Reichstag and among the populace, who are increasingly restless with the status quo."
  ww1_germanrework.2.a:0 "Good luck to the new chancellor"
 ww1_germanrework.19.t:0 "Factions in the Right"
  ww1_germanrework.19.d:0 "The new chancellor is no staunch negotiator like von Hollweg was and will now have to manage the right-wing in his favor if he wishes to stay in power. The traditionalist conservatives and the pan-German nationalists see this as an opportunity to assert their influence over the right-wing factions that the new Chancellor relies on to stay in power. These nationalistic groups, driven by a desire to restore German prestige after the crisis and assert a more aggressive national policy, are vying for control and seeking to push their agendas within the Reichstag.\n\nAmidst this internal power struggle, the Chancellor faces another critical challenge':' the looming threat of the Social Democratic Party in the upcoming 1912 election. The SPD's growing popularity poses a significant risk to the current administration's stability and conservative values. To maintain power and prevent a potential shift in political dominance, the Chancellor must navigate the complex dynamics of right-wing politics, appeasing influential factions while also formulating strategies to curtail the SPD's appeal to the masses. The next few months will be pivotal in determining the future direction of Germany, as the new Chancellor strives to consolidate power and guide the nation through these turbulent times."
@@ -75,7 +75,7 @@ ww1_germanrework.5.t:0 "Stormy Debate on the 'Royal Civil List'"
 
 #1911 Anti-Semitism in the Army
 ww1_germanrework.6.t:0 "The Centre Criticises Anti-Semitism in the Army"
- ww1_germanrework.6.d:0 ""
+ ww1_germanrework.6.d:0 "In a notable session of the Reichstag, the Zentrum has voiced its concerns over the increasing antisemitic rhetoric within the German Empire's political discourse. The party's leaders highlighted the importance of upholding the principles of equality and respect for all citizens, regardless of their religious background.\n\nThis criticism marks a significant moment as the Zentrum, traditionally focused on moderate and pragmatic policies, calls for a more inclusive and tolerant approach. The party's representatives argued that fostering unity and mutual respect is essential for the stability and progress of the nation.\n\nThe reaction to this stance has been mixed. Some political figures and segments of the populace have welcomed the Zentrum's call for moderation, viewing it as a necessary step towards a more harmonious society. Others, however, have dismissed it as overly idealistic and out of touch with the prevailing sentiments."
  ww1_germanrework.6.a:0 "A matter of some concern..."
 
 #1911 Change to Electoral Law in Grand Duchy of Hesse
@@ -140,6 +140,20 @@ ww1_germanrework.24.t:0 "The Founding of Frankfurt University"
 ww1_germanrework.25.t:0 "Einstein Comes to Germany"
  ww1_germanrework.25.d:0 "Albert Einstein, the renowned theoretical physicist, was recently offered a job as the director of the new Kaiser Wilhelm Institute for Physics, as well as membership in the Prussian Academy of Science and the Humboldt Academy of Berlin in order to be funded to conduct research. Max Planck - a theoretical physicist who served as president of the German Physical Institute from 1905 to 1909, and creator of Planck's Constant - and Walther Nernst - friend of Kaiser Wilhelm II and thermodynamic physicist - convinced Einstein to take these jobs. He settled in Dahlem on April 1st, 1914."
  ww1_germanrework.25.a:0 "But he's a jew?"
+
+#German/Belgian Colonial Event Chain
+ww1_germanrework.15.t:0 "An Offer from the Kaiser"
+ ww1_germanrework.15.d:0 ""
+ ww1_germanrework.15.a:0 "Certainly, this will benefit us both"
+ ww1_germanrework.15.b:0 "We won't work with those damn Krauts"
+
+ww1_germanrework.16.t:0 "Belgium Says Yes"
+ ww1_germanrework.16.d:0 ""
+ ww1_germanrework.16.a:0 "This will work well for both nations"
+
+ww1_germanrework.17.t:0 "Belgium Refuses"
+ ww1_germanrework.16.d:0 ""
+ ww1_germanrework.16.a:0 "They can't say we never tried..."
 
 #Decisions
 GER_fleet_in_being_mission:0 "Fleet in Being"
