Starting on Zabern Affair

--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -155,6 +155,20 @@ ww1_germanrework.17.t:0 "Belgium Refuses"
  ww1_germanrework.16.d:0 ""
  ww1_germanrework.16.a:0 "They can't say we never tried..."
 
+#The Zabern Affair
+#A Crisis Stirs
+ww1_germanrework.26.t:0 "A Crisis Stirs"
+ ww1_germanrework.26.d:0 "Earlier this week, the twenty-year-old Second Lieutenant Gunter Freiherr von Forstner of the Zabern garrison spoke disparagingly about that local inhabitants during a troop induction. The press reports that Forstner told his soldiers, 'If you are attacked, then make use of your weapon; if you stab such a Wackes in the process, then you'll get ten marks from me.' This event had been multiplied in severity by the media causing the local population to protest strongly against this treatment by the German military in the next few days."
+ ww1_germanrework.26.a:0 "It would be wise to keep an eye on this situation"
+ww1_germanrework.27.t:0 "Further Troubles in Zabern"
+ ww1_germanrework.27.d:0 "After the events earlier this week, pressure from the alsatian's and the SPD, the military saw fit to give Forstner 7 days house arrest, which was later repealed at his second hearing. Unfortunately, unimpressed by these actions, the Alsatian public continued to protest. As a further provocation, Lieutenant Forstner was reported to go out and aggravate the public after having his punishment repealed. Soon after a huge crowd of people again assembled before the barracks, which led to what the military court has called an 'inappropiate counter-reaction of the troops.'"
+ ww1_germanrework.27.a:0 "Let's hope this dies down..."
+ ww1_germanrework.27.b:0 "The Kaiser heeds the advice of Hollweg and ensures the punishment of Forstner"
+
+ww1_germanrework.32.t:0 "A Quick Resolution"
+ ww1_germanrework.32.d:0 "The Kaiser, having opted to impose a swift punishment on Forstner, has seemingly averted a political and constitutional crisis. Once the Kaiser had been made aware of the situation, he left his hunting event and immediately called for the punishment Forstner. The Reichstag and locals are placated but, as expected, the military feel scored and dishonoured by the Kaiser after his direct intervention into military affairs."
+ ww1_germanrework.32.a:0 "Well you can't make everyone happy"
+
 #Decisions
 GER_fleet_in_being_mission:0 "Fleet in Being"
 GER_smarter_navy_mission:0 "Smarter Navy"
