--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5074,6 +5074,7 @@ ROM_law_and_order:0 "A Stable Government"
 ROM_law_and_order_desc:0 "The kings number 1 priority above all is clearly a stable government. While the king may disagree with our anti democratic policies, if we can promise the king a stable hand during the dangerous times the world is facing as of now then he may be inclined to accept our rule, for now."
 ROM_agrarianists_in_power:0 "The Agrarianist Canidate"
 ROM_agrarianists_in_power_desc:0 "The fall of Carps corrupt government has lead to the king appointing Titu Maiorescu as prime minister. Maiorescu is apart of the 'Agrarianist' faction of the PC, which prioritizes fiscal responsibility, social conservatism, and as one would expect, rural issues such as education and land reform."
+ROM_for_country_side:0 "For The Country Side"
 #events 
 ww1_romania.18.d:0 "With the king losing faith in the current government, the current Prime Minister has been forced to resign. With the Prime Minister spot vacant, the king will now have to form a new government. The king has several different options available, and must pick the best one. Who shall be appointed to form the next government?"
 ww1_romania.18.a:0 "The PCD will lead a stable government!"
