--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -10567,8 +10567,8 @@ RAJ_external_security:0 "External Security"
 RAJ_external_security_desc:0 ""
 RAJ_form_the_indian_cavalry_corps:0 "Form the Indian Cavalry Corps"
 RAJ_form_the_indian_cavalry_corps_desc:0 ""
-RAJ_the_mounted_divisions:0 "The Mounted Divisions"
-RAJ_the_mounted_divisions_desc:0 ""
+RAJ_expand_the_indian_corps:0 "Expand the Indian Corps"
+RAJ_expand_the_indian_corps_desc:0 ""
 RAJ_form_the_indian_corps:0 "Form the Indian Corps"
 RAJ_form_the_indian_corps_desc:0 ""
 RAJ_indian_expeditionary_forces:0 "Indian Expeditionary Forces"
@@ -10646,7 +10646,7 @@ RAJ_the_gates_of_kabul_desc:0 ""
 
 RAJ_indian_press_act:0 "Indian Press Act"
 RAJ_indian_press_act_desc:0 "Following the Indian Press Act of 1908, radical nationalist newspapers have been mostly curtailed, but nationalist underground organisations continue to form and spread their seditious material. By reviving the provisions of the 1878 Vernacular Press Act, we can draft the main content of a new Indian Press Act aimed at suppressing the remaining nationalist movements."
-RAJ_pursue_the_morley_minto_reforms:0 "Pursue the Morley-Minto Reforms"
+RAJ_pursue_the_morley_minto_reforms:0 "Legacy of the Morley-Minto Reforms"
 RAJ_pursue_the_morley_minto_reforms_desc:0 "The Morley-Minto Reforms, also known as the Indian Council Acts of 1909, brought much-needed reconciliation with the locals and, although mostly superficial, allowed for greater participation by Indians and Muslims alike at the provincial level. Reaffirming our commitment to the reforms will help to improve our relations with the Indian population, especially since the recent introduction of the Indian Press Act."
 RAJ_george_V_royal_tour:0 "George V Royal Tour"
 RAJ_george_V_royal_tour_desc:0 "With the recent coronation of George V, [RAJ.GetLeader] has expressed his wish to organise the third Delhi Durbar, the Indian imperial-style mass meeting held in Coronation Park, Delhi, to mark the succession of an Emperor or Empress of India. As well as being a symbol of our hold on the subcontinent, the Durbar is commonly used to announce new policies regarding the Raj. As such, organising it will help us set the course."
@@ -10654,7 +10654,7 @@ RAJ_criminal_tribes_act:0 "Criminal Tribes Act"
 RAJ_criminal_tribes_act_desc:0 ""
 RAJ_indian_factories_act:0 "Indian Factories Act"
 RAJ_indian_factories_act_desc:0 ""
-RAJ_builder_of_the_raj:0 "Builder of the Raj"
+RAJ_builder_of_the_raj:0 "Begin the Construction of New Delhi"
 RAJ_builder_of_the_raj_desc:0 "Charles Hardinge has great industrial projects planned for the Raj. From schools to railways, the Viceroy and Governor-General of India will guide the construction of the Raj for years to come, and his name will be remembered for a hundred years, if not more."
 RAJ_placate_the_nationalists:0 "Concessions to the Nationalists"
 RAJ_placate_the_nationalists_desc:0 "Through his hard work and diplomatic skills, [RAJ.GetLeader] has paved the way for closer cooperation with the Indian National Congress. As a result, radicalism within the Congress has diminished and we can focus on more pressing matters."
@@ -10671,8 +10671,6 @@ RAJ_government_of_india_act:0 "Government of India Act"
 RAJ_government_of_india_act_desc:0 ""
 RAJ_mobilize_the_raj:0 "Mobilize the Raj"
 RAJ_mobilize_the_raj_desc:0 ""
-RAJ_the_breadbasket_of_the_empire:0 "The Breadbasket of the Empire"
-RAJ_the_breadbasket_of_the_empire_desc:0 ""
 RAJ_exploit_princely_ressources:0 "Exploit Princely Ressources"
 RAJ_exploit_princely_ressources_desc:0 ""
 RAJ_defence_of_india_act:0 "Defence of India Act"
