extra battalion for hamidiye

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -1958,18 +1958,31 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_add_debt_30:0 "Modify §YOttoman Public Debt Administration§! by\n£consumer_goods_texticon  Consumer Goods Factories factor: §Y30.0%§!\n"
  TUR_add_debt_60:0 "Modify §YOttoman Public Debt Administration§! by\n£consumer_goods_texticon  Consumer Goods Factories factor: §Y60.0%§!\n"
  TUR_add_debt_85:0 "Modify §YOttoman Public Debt Administration§! by\n£consumer_goods_texticon  Consumer Goods Factories factor: §Y85.0%§!\n"
- TUR_remove_debt_current_amount_THIS:0 "(Since our debt on the part of the targeted nation is less than the amount to be removed, the amount of debt removed will be [?THIS.opda_consumer_goods|.1%Y])\n\n"
- TUR_remove_debt_current_amount_ROOT:0 "(Since our debt on the part of the targeted nation is less than the amount to be removed, the amount of debt removed will be [?ROOT.opda_consumer_goods|.1%Y])\n\n"
- TUR_remove_debt_current_amount_FROM:0 "(Since our debt on the part of the targeted nation is less than the amount to be removed, the amount of debt removed will be [?FROM.opda_consumer_goods|.1%Y])\n\n"
- TUR_remove_debt_current_amount_FRA:0 "(Since our debt on the part of the targeted nation is less than the amount to be removed, the amount of debt removed will be [?FRA.opda_consumer_goods|.1%Y])\n\n"
- TUR_remove_debt_current_amount_ENG:0 "(Since our debt on the part of the targeted nation is less than the amount to be removed, the amount of debt removed will be [?ENG.opda_consumer_goods|.1%Y])\n\n"
- TUR_remove_debt_current_amount_GER:0 "(Since our debt on the part of the targeted nation is less than the amount to be removed, the amount of debt removed will be [?GER.opda_consumer_goods|.1%Y])\n\n"
- TUR_remove_debt_current_amount_BEL:0 "(Since our debt on the part of the targeted nation is less than the amount to be removed, the amount of debt removed will be [?BEL.opda_consumer_goods|.1%Y])\n\n"
- TUR_remove_debt_current_amount_HOL:0 "(Since our debt on the part of the targeted nation is less than the amount to be removed, the amount of debt removed will be [?HOL.opda_consumer_goods|.1%Y])\n\n"
- TUR_remove_debt_current_amount_ITA:0 "(Since our debt on the part of the targeted nation is less than the amount to be removed, the amount of debt removed will be [?ITA.opda_consumer_goods|.1%Y])\n\n"
- TUR_remove_debt_current_amount_AUH:0 "(Since our debt on the part of the targeted nation is less than the amount to be removed, the amount of debt removed will be [?AUH.opda_consumer_goods|.1%Y])\n\n"
- TUR_remove_debt_current_amount_RUS:0 "(Since our debt on the part of the targeted nation is less than the amount to be removed, the amount of debt removed will be [?RUS.opda_consumer_goods|.1%Y])\n\n"
- TUR_remove_debt_current_amount_USA:0 "(Since our debt on the part of the targeted nation is less than the amount to be removed, the amount of debt removed will be [?USA.opda_consumer_goods|.1%Y])\n\n"
+ TUR_add_debt_1_target:0 "(§YTarget Country§!) £consumer_goods_texticon  Consumer Goods Factories factor: §Y1.0%§!\n"
+ TUR_add_debt_2_target:0 "(§YTarget Country§!) £consumer_goods_texticon  Consumer Goods Factories factor: §Y2.0%§!\n"
+ TUR_add_debt_3_target:0 "(§YTarget Country§!) £consumer_goods_texticon  Consumer Goods Factories factor: §Y3.0%§!\n"
+ TUR_add_debt_5_target:0 "(§YTarget Country§!) £consumer_goods_texticon  Consumer Goods Factories factor: §Y5.0%§!\n"
+ TUR_add_debt_6_target:0 "(§YTarget Country§!) £consumer_goods_texticon  Consumer Goods Factories factor: §Y6.0%§!\n"
+ TUR_add_debt_8_target:0 "(§YTarget Country§!) £consumer_goods_texticon  Consumer Goods Factories factor: §Y8.0%§!\n"
+ TUR_add_debt_9_target:0 "(§YTarget Country§!) £consumer_goods_texticon  Consumer Goods Factories factor: §Y9.0%§!\n"
+ TUR_add_debt_10_target:0 "(§YTarget Country§!) £consumer_goods_texticon  Consumer Goods Factories factor: §Y10.0%§!\n"
+ TUR_add_debt_15_target:0 "(§YTarget Country§!) £consumer_goods_texticon  Consumer Goods Factories factor: §Y15.0%§!\n"
+ TUR_add_debt_25_target:0 "(§YTarget Country§!) £consumer_goods_texticon  Consumer Goods Factories factor: §Y25.0%§!\n"
+ TUR_add_debt_30_target:0 "(§YTarget Country§!) £consumer_goods_texticon  Consumer Goods Factories factor: §Y30.0%§!\n"
+ TUR_add_debt_60_target:0 "(§YTarget Country§!) £consumer_goods_texticon  Consumer Goods Factories factor: §Y60.0%§!\n"
+ TUR_add_debt_85_target:0 "(§YTarget Country§!) £consumer_goods_texticon  Consumer Goods Factories factor: §Y85.0%§!\n"
+ TUR_remove_debt_current_amount_THIS:0 "(Since our debt on the part of the targeted nation is less than the amount to be removed, the amount of debt removed will be [?THIS.opda_consumer_goods|.1%Y])\n"
+ TUR_remove_debt_current_amount_ROOT:0 "(Since our debt on the part of the targeted nation is less than the amount to be removed, the amount of debt removed will be [?ROOT.opda_consumer_goods|.1%Y])\n"
+ TUR_remove_debt_current_amount_FROM:0 "(Since our debt on the part of the targeted nation is less than the amount to be removed, the amount of debt removed will be [?FROM.opda_consumer_goods|.1%Y])\n"
+ TUR_remove_debt_current_amount_FRA:0 "(Since our debt on the part of the targeted nation is less than the amount to be removed, the amount of debt removed will be [?FRA.opda_consumer_goods|.1%Y])\n"
+ TUR_remove_debt_current_amount_ENG:0 "(Since our debt on the part of the targeted nation is less than the amount to be removed, the amount of debt removed will be [?ENG.opda_consumer_goods|.1%Y])\n"
+ TUR_remove_debt_current_amount_GER:0 "(Since our debt on the part of the targeted nation is less than the amount to be removed, the amount of debt removed will be [?GER.opda_consumer_goods|.1%Y])\n"
+ TUR_remove_debt_current_amount_BEL:0 "(Since our debt on the part of the targeted nation is less than the amount to be removed, the amount of debt removed will be [?BEL.opda_consumer_goods|.1%Y])\n"
+ TUR_remove_debt_current_amount_HOL:0 "(Since our debt on the part of the targeted nation is less than the amount to be removed, the amount of debt removed will be [?HOL.opda_consumer_goods|.1%Y])\n"
+ TUR_remove_debt_current_amount_ITA:0 "(Since our debt on the part of the targeted nation is less than the amount to be removed, the amount of debt removed will be [?ITA.opda_consumer_goods|.1%Y])\n"
+ TUR_remove_debt_current_amount_AUH:0 "(Since our debt on the part of the targeted nation is less than the amount to be removed, the amount of debt removed will be [?AUH.opda_consumer_goods|.1%Y])\n"
+ TUR_remove_debt_current_amount_RUS:0 "(Since our debt on the part of the targeted nation is less than the amount to be removed, the amount of debt removed will be [?RUS.opda_consumer_goods|.1%Y])\n"
+ TUR_remove_debt_current_amount_USA:0 "(Since our debt on the part of the targeted nation is less than the amount to be removed, the amount of debt removed will be [?USA.opda_consumer_goods|.1%Y])\n"
  TUR_add_debt_1_ALL:0 "\n£consumer_goods_texticon  Consumer Goods Factories factor: §Y1.0%§!\n"
  TUR_add_debt_2_ALL:0 "\n£consumer_goods_texticon  Consumer Goods Factories factor: §Y2.0%§!\n"
  TUR_add_debt_current_amount_THIS:0 "Modify §YOttoman Public Debt Administration§! by\n£consumer_goods_texticon  Consumer Goods Factories factor: [?THIS.opda_consumer_goods_opposite|.1%Y]\n\n"
