--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4492,7 +4492,7 @@
  TUR_disband_hamidiye_tt2:0 "Modify £ww1_flag_KUR  §YKurdish Minority§! by\n£manpower_texticon  Recruitable Population: §G+5.00%§!\nModify the state's modification to §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §R-0.10%§!\n£war_support_modifiericons_texticon  War Support: §R-0.10%§!\n\n"
  TUR_tribal_light_cavalry_regiments:0 "Tribal Light Cavalry Regiments"
  TUR_tribal_light_cavalry_regiments_desc:0 "Hamidiye was the collective name given to tribal cavalry regiments formed with the intention of patrolling our eastern border. Even though it's one of the upbringing from Abdulhamid II's rule, we can still utilize them to our needs under a new name."
- TUR_tribal_light_cavalry_regiments_tt:0 "Modify [TUR_army_of_a_bygone_era_name] by\n£political_violence_loss_texticon  Resistance Decay Speed: §G+10%§!\n£attack_irregular_cavalry_texticon  Irregular Cavalry Attack: §G+10.00%§!\n£defence_irregular_cavalry_texticon  Irregular Cavalry Defense: §G+10.00%§!\n\n"
+ TUR_tribal_light_cavalry_regiments_tt:0 "Modify [TUR_army_of_a_bygone_era_name] by\nBatalion Count Limit: §Y+50§!\n£political_violence_loss_texticon  Resistance Decay Speed: §G+10%§!\n£attack_irregular_cavalry_texticon  Irregular Cavalry Attack: §G+10.00%§!\n£defence_irregular_cavalry_texticon  Irregular Cavalry Defense: §G+10.00%§!\n\n"
  TUR_tribal_light_cavalry_regiments_tt2:0 "Modify template cap of §YHamidiye Alayı§! by §G+14§!."
  TUR_utilize_gendarmerie:0 "Utilize Gendarmerie"
  TUR_utilize_gendarmerie_desc:0 "Gendarmerie has remained as a disconnected police force from our army. But there's much room to gain from integrating these rural police forces into our army."
@@ -4649,10 +4649,10 @@
  TUR_officialize_second_bureau_desc:0 "After Yıldız Intelligence Agency has left its prominence, our government is left without no significant intelligence service. Yet there is a small branch, without no official recognition, trying to assume intelligence operations. This branch thats known as Second Breau, can be officialy formed by the state and can be expanded to be given a more active role."
  TUR_increase_customs_taxes:0 "Increase Customs Taxes"
  TUR_increase_customs_taxes_desc:0 "Our empire has been having a hard time with paying its own debts. This is due to high foreign reliance on modernization. Our current prime minister is planning to have discussions with the British in order to increase customs taxes from 11% to 15%, which will help us with paying our debts."
- TUR_increase_customs_taxes_tt1:0 "For every nation that has a part on our debt, §YOttoman Public Debt Administration§! will be modified by Consumer Goods Factories factor: §Y-2.0%§!\n\nModify §YOttoman Public Debt Administration§! by\nConsumer Goods Factories factor: [?TUR_has_debt_2|.1%Y]"
- TUR_increase_customs_taxes_tt2:0 "Consumer Goods Factories factor: [?THIS.TUR_has_debt_2_opposite|.1%Y]\n"
- TUR_increase_customs_taxes_tt3:0 "For every nation that has a part on our debt, §YOttoman Public Debt Administration§! will be modified by Consumer Goods Factories factor: §Y-2.0%§!\n\nModify §YOttoman Public Debt Administration§! by\nConsumer Goods Factories factor: [?TUR_increase_customs_taxes_var1|.1%Y]"
- TUR_increase_customs_taxes_tt4:0 "Consumer Goods Factories factor: [?THIS.TUR_increase_customs_taxes_var2|.1%Y]\n"
+ TUR_increase_customs_taxes_tt1:0 "For every nation that has a part on our debt, §YOttoman Public Debt Administration§! will be modified by £consumer_goods_texticon  Consumer Goods Factories factor: §Y-2.0%§!\n\nModify §YOttoman Public Debt Administration§! by\n£consumer_goods_texticon  Consumer Goods Factories factor: [?TUR_has_debt_2|.1%Y]"
+ TUR_increase_customs_taxes_tt2:0 "£consumer_goods_texticon  Consumer Goods Factories factor: [?THIS.TUR_has_debt_2_opposite|.1%Y]\n"
+ TUR_increase_customs_taxes_tt3:0 "For every nation that has a part on our debt, §YOttoman Public Debt Administration§! will be modified by £consumer_goods_texticon  Consumer Goods Factories factor: §Y-2.0%§!\n\nModify §YOttoman Public Debt Administration§! by\n£consumer_goods_texticon  Consumer Goods Factories factor: [?TUR_increase_customs_taxes_var1|.1%Y]"
+ TUR_increase_customs_taxes_tt4:0 "£consumer_goods_texticon  Consumer Goods Factories factor: [?THIS.TUR_increase_customs_taxes_var2|.1%Y]\n"
  TUR_ottoman_public_debt_administration:0 "Ottoman Public Debt Administration"
  TUR_ottoman_public_debt_administration_desc:0 "As our empire's debts were accimulated due to foreign reliance, Europeans established Ottoman Public Debt Administration in 1881 with the intention of collecting Ottoman taxes with an autonomous body. As this body hinders our national sovereignty, we should continue paying our debts to the administration as soon as possible."
  TUR_OPDA_trigger_tooltip:0 "One of the following must be true:\n   Has indutrial concern §YOttoman Public Debt Administration§!\n   Has national spirit §YOttoman Public Debt§!"
@@ -4748,8 +4748,10 @@
  TUR_balkan_push_desc:0 "While our allies ask us to fight with them on their fronts, we have our own threats right across the border. As Bulgaria stands as a possible member for the Central Powers, we have to prepare plans to swiftly invade and neutralize the enemy across the border."
  TUR_form_cossack_units:0 "Form Cossack Units"
  TUR_form_cossack_units_desc:0 "Cossack units are fierce enemies on the battle front. As we have our own similar irregular cavalry Hamidiye units, it'll be easy for us to emulate Russian Cossack units and create our own fighting force."
- TUR_form_cossack_units_tt:0 "Modify [TUR_army_of_a_bygone_era_name] by\n£attack_cavalry_texticon  Cavalry Attack: §G+10.0%§!\n£defence_cavalry_texticon  Cavalry Defense: §G+5.0%§!\n\nCreates a division template named §YRus Kossak Birlikleri§!."
- TUR_form_cossack_units_tt2:0 "Modify template cap of §YHamidiye Alayı§! by §G+7§!."
+ TUR_form_cossack_units_tt:0 "Modify [TUR_army_of_a_bygone_era_name] by\nBatalion Count Limit: §Y+50§!\n£attack_cavalry_texticon  Cavalry Attack: §G+10.0%§!\n£defence_cavalry_texticon  Cavalry Defense: §G+5.0%§!\n\nCreates a division template named §YRus Kossak Birlikleri§!."
+ TUR_form_cossack_units_tt2:0 "Modify [TUR_army_of_a_bygone_era_name] by\n£attack_cavalry_texticon  Cavalry Attack: §G+10.0%§!\n£defence_cavalry_texticon  Cavalry Defense: §G+5.0%§!\n\nCreates a division template named §YRus Kossak Birlikleri§!."
+ TUR_form_cossack_units_tt3:0 "Modify template cap of §YHamidiye Alayı§! by §G+7§!."
+ TUR_form_cossack_units_tt4:0 "If has not completed focus §YDisband Hamidiye§!:\nModify template cap of §YHamidiye Alayı§! by §G+7§!."
  TUR_cooperation_in_desert_warfare:0 "Cooperation in Desert Warfare"
  TUR_cooperation_in_desert_warfare_desc:0 "While our empire has entrenched us in the Arabian desert, foreign powers like Britain see more success in taming the desert. Perhaps we can ask our allies to assist us in desert warfare."
  TUR_cooperation_in_desert_warfare_tt:0 "Modify [TUR_army_of_a_bygone_era_name] by\n£attrition_hot_texticon  Heat Attrition: §G-10.0%§!\n£out_of_supply_texticon  Non-Combat Out of Supply Penalties: §G-15.0%§!\n£temperature_hot_texticon  Hot acclimatization gain factor: §G+20.0%§!\n\nDeploys 8 §YHercin Süvari Tümeni§!."
