--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -920,10 +920,7 @@
  TUR_havacilik_komisyonu_name_1_desc:0 "Founded in the recent years, Ottoman aviation squadrons has been established with the aim of improving aviation in the empire. Through reforms and innovations, we'll be able to improve our aviation squadrons."
  TUR_havacilik_komisyonu_name_2:0 "Kuva-yı Havaiye Müfettiş-i Umumiliği"
  TUR_havacilik_komisyonu_name_2_desc:0 "Recently organized into General Inspectorate of Air Forces, which was previously known as Ottoman aviation squadrons has been established with the aim of improving aviation in the empire. Through reforms and innovations, we'll be able to improve our aviation squadrons."
- TUR_army_of_a_bygone_era_tt:0 "[TUR_battalion_limit_count_tt][TUR_national_research_institutes_tt]"
- TUR_battalion_limit_count_tt_50:0 "Batalion Count Limit §Y+50§!"
- TUR_battalion_limit_count_tt_100:0 "Batalion Count Limit §Y+100§!"
- TUR_battalion_limit_count_tt_150:0 "Batalion Count Limit §Y+150§!"
+ TUR_army_of_a_bygone_era_tt:0 "[TUR_national_research_institutes_tt]"
  TUR_national_research_institutes_tt_yes:0 "£research_speed_equipment_texticon  Weapons and Equipment Research Speed: §G+10%§! \n£research_speed_artillery_texticon  Artillery Research Speed: §G+10%§! \n£research_speed_motorised_texticon  Motorization Research Speed: §G+10%§! \n£research_speed_tank_texticon  Armor Research Speed: §G+10%§! \n"
  TUR_ottoman_navy_tt:0 "[TUR_increased_naval_research_tt][TUR_more_resources_for_the_naval_industry_tt][TUR_increased_ship_production_tt]"
  TUR_increased_naval_research_tt_yes:0 "£research_speed_battery_texticon  Ship Modules Research Speed: §G+15%§! \n£research_speed_naval_texticon  Naval Research Speed: §G+15%§! \n"
