--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5087,7 +5087,7 @@
  TUR_increased_garrisons_tt:0 "Modify §YOttoman 4th Army§! by\n£political_violence_gain_texticon  Resistance Growth Speed: §G-15%§!\n\nModify occupation law §Y$TUR_gendarmerie$§! by: \n $MODIFIER_RESISTANCE_TARGET$: §G-5%§! \n $MODIFIER_RESISTANCE_DAMAGE_TO_GARRISONS$: §G-10.00%§! \n $MODIFIER_REQUIRED_GARRISON_FACTOR$: §G-5%§! \n $MODIFIER_COMPLIANCE_GAIN_ADD$: §R-0.001%§! \n\n"
  TUR_form_yildirim_army_group:0 "From Yıldırım Army Group"
  TUR_form_yildirim_army_group_desc:0 "Ottoman 4th army command is not sufficient at fulfilling its duties. As military situation at the front worsenes due to this reason, it'd be best to dissolve Ottoman 4th army and establish Yıldırım army goup in its place."
- TUR_form_yildirim_army_group_tt:0 "Modify §YOttoman 4th Army§! by\nBatalion Count Limit: §Y+100§!\n£army_experience  Army Experience Gain: §G+5%§!\n\n"
+ TUR_form_yildirim_army_group_tt:0 "Modify §YOttoman 4th Army§! by\n£battalion_limit_count_texticon  Batalion Count Limit: §Y+100§!\n£army_experience  Army Experience Gain: §G+5%§!\n\n"
  TUR_appoint_kucuk_cemal:0 "Appoint Küçük Cemal"
  TUR_appoint_kucuk_cemal_desc:0 "Our regional command, though has successful commanders, still needs other military figures to carry out its operations. With that reason, we'll request the appointment of Mehmed Cemal Paşa, also known as Mersinli of Küçük Cemal Paşa to the 4th Ottoman Army in the region."
  TUR_appoint_kucuk_cemal_tt:0 "[TUR.GetFlag]§Y[TUR.GetName]§!:\n§YMehmed Cemal Paşa§!([TUR.GetFlag]) Joins §Y[TRS.GetNameDef]§!\n§YMehmed Cemal Paşa§! becomes a Chief of Army with the effect:\n£army_experience  Army Experience Gain: §G+0.20§! daily\n£attack_texticon  Division Attack: §G+5.0%§!\n"
