--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -1634,15 +1634,15 @@ FRA_german_reparations:0 "German Reparations"
  CHI_reparation_from_france:0 "Reparations from [FRA.GetName]"
  CHI_reparation_from_france_desc:0 "We valiantly defended our territory against the imperialist views of France. The French government and its Indochina colony were forced to admit defeat and pay heavy reparations for an entire year."
 
- plus_6_bataillons_limit:0 "Batalion Count Limit: §Y+6§!"
- plus_12_bataillons_limit:0 "Batalion Count Limit: §Y+12§!"
- plus_18_bataillons_limit:0 "Batalion Count Limit: §Y+18§!"
- plus_50_bataillons_limit:0 "Batalion Count Limit: §Y+50§!"
- plus_100_bataillons_limit:0 "Batalion Count Limit: §Y+100§!"
- plus_150_bataillons_limit:0 "Batalion Count Limit: §Y+150§!"
- plus_150_bataillons_limit:0 "Batalion Count Limit: §Y+200§!"
- plus_250_bataillons_limit:0 "Batalion Count Limit: §Y+250§!"
- minus_50_percent_bataillons_limit:0 "Batalion Count Limit: §R-50%§!"
+ plus_6_bataillons_limit:0 "£battalion_limit_count_texticon  Batalion Count Limit: §Y+6§!"
+ plus_12_bataillons_limit:0 "£battalion_limit_count_texticon  Batalion Count Limit: §Y+12§!"
+ plus_18_bataillons_limit:0 "£battalion_limit_count_texticon  Batalion Count Limit: §Y+18§!"
+ plus_50_bataillons_limit:0 "£battalion_limit_count_texticon  Batalion Count Limit: §Y+50§!"
+ plus_100_bataillons_limit:0 "£battalion_limit_count_texticon  Batalion Count Limit: §Y+100§!"
+ plus_150_bataillons_limit:0 "£battalion_limit_count_texticon  Batalion Count Limit: §Y+150§!"
+ plus_150_bataillons_limit:0 "£battalion_limit_count_texticon  Batalion Count Limit: §Y+200§!"
+ plus_250_bataillons_limit:0 "£battalion_limit_count_texticon  Batalion Count Limit: §Y+250§!"
+ minus_50_percent_bataillons_limit:0 "£battalion_limit_count_texticon  Batalion Count Limit: §R-50%§!"
 
  FRA_president_jules_pams:0 "President Jules Pams"
  FRA_edouard_vaillant:0 "President Edouard Vaillant"
