--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -4550,9 +4550,16 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ottoman_syria.19.c:0 "Another more enemy falls."
  ottoman_syria.19.e:0 "People of Egypt have proven their loyalty to the Caliph."
  ottoman_syria.19.f:0 "What lies ahead for Egypt?"
- ottoman_syria.20.t:0 "Arabist Movement Seeks Independence"
- ottoman_syria.20.d:0 "What initially argued for equal representation and decentralization, the Arabist movement has started to seek outright independence. Our staggering defeat at the hands of our enemies has pursued the Arabist movement to seek independence as they fear our loss would result in occupation by foreign powers."
- ottoman_syria.20.a:0 "They're showing their true colors."
+ ottoman_syria.20.t:0 "Arabist with Foreign Connections"
+ ottoman_syria.20.d:0 "As war dwell over the empire, thus also Syria, several Arabists have intensified their opposition. Some of the proponents of the Arabist movement and Arab upheaval have been working with foreign powers to achieve Arab autonomy or even outright independence in our lands. As we go to war with those same foreign powers, those who're supported by them have started to outright oppose our state and side with the imperialists."
+ ottoman_syria.20.a:0 "Their loyalties lied with the enemy."
+ ottoman_syria.21.t:0 "Arabist Movement Seeks Independence"
+ ottoman_syria.21.d:0 "What initially argued for equal representation and decentralization, the Arabist movement has started to seek outright independence. Our staggering defeat at the hands of our enemies has pursued the Arabist movement to seek independence as they fear our loss would result in occupation by foreign powers."
+ ottoman_syria.21.a:0 "They're showing their true colors."
+ ottoman_syria.23.t:0 "Hussein's Revolt"
+ ottoman_syria.23.d:0 "Dissolutioned with the Turkish rule, [HJZ.GetLeader] has started an outright rebellion against our empire. Many within the empire, both Arabs of Syria and heads of the central government, accused Cemâl's draconian rule in the land. Hussein's revolt in Hejaz undoubtedly rallied the Arab opposition in Syria. While Cemâl staunchly opposes moderating his policies in Syria, perhaps undertaking such action will ease the opposition by the locals."
+ ottoman_syria.23.a:0 "No revolt can change our policies."
+ ottoman_syria.23.b:0 "Intervention of central government moderates our actions."
 
  ottoman..120.t:0 "Sects Mobilize"
  ottoman..120.d:0 "With the start of the war, conservative sects supporting our regime has started to send volunteer forces in an effort to aid us in our war effort."
