--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -684,6 +684,8 @@
  TUR_arab_minority_desc:0 "This state is home to many minorities, especially Arabs. As a result, the state suffers from supply difficulties and lack of construction capabilities among other things."
  TUR_greek_minority:0 "£ww1_game_rule_flag_GRE  §YGreek Minority§!"
  TUR_greek_minority_desc:0 "This state is home to many minorities, especially Greeks. As a result, the state suffers from lack of cooperative property and increased intel for the enemy while increased construction capabilities among other things."
+ TUR_jewish_minority:0 "£ww1_flag_ISR  §YJewish Minority§!"
+ TUR_jewish_minority_desc:0 "This state is home to many minorities, especially Jews. As a result, the state suffers from lack of usable resources while increased construction capabilities among other things."
  TUR_south_slavic_minority:0 "£ww1_game_rule_flag_YUG  §YSouth Slavic Minority§!"
  TUR_south_slavic_minority_desc:0 "This state is home to many minorities, especially South Slavs. As a result, the state suffers from extra need for garrisons and harder time with surpressing rebellions among other things."
  TUR_albanian_minority:0 "£ww1_flag_ALB  §YAlbanian Minority§!"
