localisation for great war brunch

--- a/localisation/english/RUS_content_l_english.yml
+++ b/localisation/english/RUS_content_l_english.yml
@@ -342,6 +342,20 @@
  RUS_protectorate_of_tuva: "Protectarate over Tuva"
  RUS_demand_armenian_reforms: "Demand for the Armenian reforms"
  RUS_unity_of_the_entente: "The unity of the Entente"
+ RUS_second_patriotic_war: "The Second Patriotic War"
+ RUS_import_western_weapons: "Western arms imports"
+ RUS_arrest_the_bolsheviks: "Arrest of Bolsheviks" 
+ RUS_fight_military_industrial_committees: "Fight the military-industrial committees"
+ RUS_support_military_industrial_committees: "Assistance to military-industrial committees"
+ RUS_special_councils: "Special Council"
+ RUS_appease_liberal_opposition: "Appease the Liberal Opposition"
+ RUS_support_zemgor: "Support Zemgor"
+ RUS_question_of_the_high_command: "Question of the High Command"
+ RUS_wartime_dictatorship: "Wartime dictatorship"
+ RUS_commander_in_chief_nikolai: "Chief of Staff Nikolai"
+ RUS_death_battalions: "Death battalions"
+ RUS_loyalist_cabinet: "The Loyalist Cabinet"
+ RUS_cabinet_of_public_trust: "Cabinet of Public Trust"
 
 
  # Focus Filters
