мужской залив россии

--- a/localisation/english/RUS_content_l_english.yml
+++ b/localisation/english/RUS_content_l_english.yml
@@ -346,7 +346,7 @@
  RUS_import_western_weapons: "Western arms imports"
  RUS_arrest_the_bolsheviks: "Arrest of Bolsheviks" 
  RUS_fight_military_industrial_committees: "Fight the military-industrial committees"
- RUS_support_military_industrial_committees: "Assistance to military-industrial committees"
+ RUS_support_military_industrial_committees: "Assist military-industrial committees"
  RUS_special_councils: "Special Council"
  RUS_appease_liberal_opposition: "Appease the Liberal Opposition"
  RUS_support_zemgor: "Support Zemgor"
