--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4987,7 +4987,10 @@ ROM_re_assure_liberals:0  "Reassure The Liberals"
 ROM_re_assure_liberals_desc:0 "Many liberals in Romania have been worried by the kings new government. They fear a reversion of Romanias democracy, and the king replacing said democracy with a dictatorship. These rumors are absolutely false. This government is not a thin veiled shadow for the king, and the king is still committed to Romanian democracy."
 kings_gov.tt:0 "This focus will be §Yautocompleted§! if King Carol appoints the §mPCD§! to form a government"
 kings_gov2.tt:0 "This focus will be §Yautocompleted§! if the King appoints §YTitu Maiorescu§! of the §cPC§! to form a government"
-
+kings_gov3.tt:0 "This focus will be §Yautocompleted§! if the King appoints §YBarbu Delavrancea§! of the §cPC§! to form a government"
+ROM_a_moral_romania:0 "Revive Trust in the Government"
+ROM_a_moral_romania.tt:0 "For every §Y8.00%§! democratic support, this focus will give us:\nGain Base Stability: §G+1.50%§!\nPolitical Power: §G+5§!\nBecause of our current democratic support, this focus will give:"
+ROM_a_moral_romania_desc:0 "The past few corrupt administrations - both containing the PNL and the PC, have greatly lowered the faith of the people in Romanias government. We must strive to restore the Romanian peoples confidence in our government."
 no_happy_few:0 "Didn't accept Carols request to not undo land reform"
 ROM_we_happy_few:0 "We Happy Few"
 ROM_we_happy_few_desc:0 "Is it not the landlords who make up some of the richest in Romania? Angering them further won't do us any good, and we should instead reach out to landlords and offer them some input on our future domestic legislation"
